update activity bomberos voluntarios

--- a/app/src/main/res/layout/activity_bomberos_list.xml
+++ b/app/src/main/res/layout/activity_bomberos_list.xml
@@ -35,6 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/headerContainer">
 
         <EditText
+            android:id="@+id/etBuscador"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
