--- a/app/src/main/res/layout/activity_bomberos_list.xml
+++ b/app/src/main/res/layout/activity_bomberos_list.xml
@@ -78,4 +78,16 @@
             android:orientation="horizontal"/>
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/primary_blue"
+        android:visibility="visible"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:elevation="10dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
