update activity hospitales compartir

--- a/app/src/main/res/layout/item_hospital_row.xml
+++ b/app/src/main/res/layout/item_hospital_row.xml
@@ -74,6 +74,20 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:focusable="true"/>
+
+            <ImageView
+                android:id="@+id/btnHospitalShare"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@android:drawable/ic_menu_share"
+                app:tint="@color/whatsapp_green"
+                android:padding="8dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:focusable="true"/>
+
         </LinearLayout>
+
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
