--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -36,43 +36,14 @@
                     android:layout_marginBottom="10dp"/>
             </FrameLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:layout_marginTop="-30dp"
-                android:paddingHorizontal="16dp">
 
-                <ImageView
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:src="@drawable/ic_launcher_background"
-                    android:background="@drawable/bg_circle_white"
-                    android:elevation="4dp"
-                    android:layout_margin="8dp"/>
-                <ImageView
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:src="@drawable/ic_launcher_background"
-                    android:background="@drawable/bg_circle_white"
-                    android:elevation="4dp"
-                    android:layout_margin="8dp"/>
-                <ImageView
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:src="@drawable/ic_launcher_background"
-                    android:background="@drawable/bg_circle_white"
-                    android:elevation="4dp"
-                    android:layout_margin="8dp"/>
-            </LinearLayout>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/searchCardGlobal"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="-25dp"
+                android:layout_marginTop="25dp"
                 app:cardCornerRadius="25dp"
                 app:cardElevation="4dp"
                 app:layout_constraintTop_toBottomOf="@+id/headerContainer">
@@ -120,7 +91,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scrollbars="none"
-                android:paddingVertical="8dp">
+                android:paddingVertical="8dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp">
 
                 <LinearLayout
                     android:id="@+id/category_icons_container"
