--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -5,14 +5,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:fitsSystemWindows="true">
 
     <ScrollView
-        android:layout_width="match_parent"
         android:id="@+id/scrollView"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
+
+        android:clipToPadding="false"
+        android:paddingBottom="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
@@ -36,17 +40,13 @@
                     android:layout_marginBottom="10dp"/>
             </FrameLayout>
 
-
-
             <androidx.cardview.widget.CardView
                 android:id="@+id/searchCardGlobal"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="25dp"
-                app:cardCornerRadius="25dp"
-                app:cardElevation="4dp"
-                app:layout_constraintTop_toBottomOf="@+id/headerContainer">
+                android:layout_marginTop="-25dp"  android:layout_marginBottom="24dp" app:cardCornerRadius="25dp"
+                app:cardElevation="4dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -84,7 +84,6 @@
                         app:tint="@color/primary_blue"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-            <!-- Spinner Ciudad -->
 
 
             <HorizontalScrollView
@@ -92,18 +91,15 @@
                 android:layout_height="wrap_content"
                 android:scrollbars="none"
                 android:paddingVertical="8dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp">
-
-                <LinearLayout
-                    android:id="@+id/category_icons_container"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingHorizontal="16dp">
-
-                </LinearLayout>
+                android:layout_marginBottom="24dp"> <LinearLayout
+                android:id="@+id/category_icons_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingHorizontal="16dp">
+            </LinearLayout>
             </HorizontalScrollView>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -111,8 +107,7 @@
                 android:textStyle="bold"
                 android:textSize="18sp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="16dp"
-                android:textColor="@color/text_dark"/>
+                android:layout_marginBottom="8dp" android:textColor="@color/text_dark"/>
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
@@ -121,14 +116,13 @@
                 android:paddingVertical="8dp"
                 android:clipToPadding="false"
                 android:paddingStart="16dp"
-                android:paddingEnd="16dp">
-
-                <LinearLayout
-                    android:id="@+id/info_cards_container"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                </LinearLayout>
+                android:paddingEnd="16dp"
+                android:layout_marginBottom="32dp"> <LinearLayout
+                android:id="@+id/info_cards_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            </LinearLayout>
             </HorizontalScrollView>
 
             <TextView
@@ -138,8 +132,7 @@
                 android:textStyle="bold"
                 android:textSize="18sp"
                 android:layout_marginStart="20dp"
-                android:layout_marginBottom="8dp"
-                android:textColor="@color/text_dark"/>
+                android:layout_marginBottom="8dp" android:textColor="@color/text_dark"/>
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
@@ -164,17 +157,18 @@
     <LinearLayout
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
         android:background="@color/white"
         android:elevation="8dp"
+        android:paddingBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:id="@+id/bottom_nav_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="60dp"
             android:orientation="horizontal"/>
 
     </LinearLayout>
