--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -4,21 +4,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/map_full_fragment"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
-        app:layout_constraintTop_toTopOf="parent"/>
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"> <androidx.fragment.app.FragmentContainerView
+    android:id="@+id/map_full_fragment"
+    android:name="com.google.android.gms.maps.SupportMapFragment"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
+    app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content" android:orientation="horizontal"
         android:gravity="center"
         android:background="@color/white"
         android:elevation="8dp"
@@ -27,8 +25,7 @@
         <LinearLayout
             android:id="@+id/bottom_nav_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"/>
+            android:layout_height="60dp" android:orientation="horizontal"/>
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -39,12 +36,8 @@
         android:src="@drawable/ic_info"
         app:tint="@color/white"
         app:backgroundTint="@color/primary_blue"
-
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
         app:layout_constraintStart_toStartOf="parent"
-
         android:contentDescription="Abrir Leyenda del Mapa" />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
