--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -63,6 +63,8 @@
 
                     <EditText
                         android:id="@+id/etBuscadorGlobal"
+                        android:imeOptions="actionSearch"
+                        android:inputType="textNoSuggestions"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
